--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,7 @@ Build-Depends: debhelper (>= 8),
                libfile-find-rule-perl,
                liblinux-inotify2-perl,
                libmodule-build-perl (>= 0.4),
+               libmoose-perl,
                libnamespace-autoclean-perl,
                libtest-exception-perl,
                libtest-without-module-perl,
@@ -20,6 +21,7 @@ Architecture: all
 Depends: libanyevent-perl,
          libfile-find-rule-perl,
          liblinux-inotify2-perl,
+         libmoose-perl,
          libnamespace-autoclean-perl,
          ${misc:Depends},
          ${perl:Depends}
